--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,17 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#a8d4ea" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Simple to-do list. You can add, edit, mark completed, delete and see your progress in circular percentage bar."
     />
+    <meta property="og:title" content="Diana's Simple To-do List App"/>
+    <meta property="og:description" content="You can add, edit, mark completed, delete and see your progress in circular percentage bar."/>
+    <meta property="og:image" content="url(src\assets\images\todo.jpg)"/>
+    <meta property="og:type" content="App">
+    <meta property="og:url" content="dianago-todolist.netlify.app">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Diana's To-do List</title>
     <!----Font Awesome-->
     <script src="https://kit.fontawesome.com/d82ff15e60.js" crossorigin="anonymous"></script>
     <!----Google fonts-->
