--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#a8d4ea" />
-    <meta
-      name="description"
-      content="Simple to-do list. You can add, edit, mark completed, delete and see your progress in circular percentage bar."
-    />
+    <meta name="description" content="Simple to-do list. You can add, edit, mark completed, delete and see your progress in circular percentage bar." />
     <meta property="og:title" content="Diana's Simple To-do List App"/>
     <meta property="og:description" content="You can add, edit, mark completed, delete and see your progress in circular percentage bar."/>
     <meta property="og:image" content="url(src\assets\images\todo.jpg)"/>
     <meta property="og:type" content="App">
     <meta property="og:url" content="dianago-todolist.netlify.app">
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/diana-icon.svg">
+    <link rel="alternate icon" href="%PUBLIC_URL%/diana-icon.ico">
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
